--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "activitypub-identity-proxy-cf-worker",
   "version": "0.0.0",
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20230321.0",
-    "typescript": "~4.7.0",
-    "wrangler": "2.13.0",
-    "gts": "^3.1.1",
-    "@types/node": "^14.11.2"
+    "@cloudflare/workers-types": "^4.20231121.0",
+    "@types/node": "^20.10.0",
+    "gts": "^5.2.0",
+    "typescript": "~5.3.2",
+    "wrangler": "^3.17.1"
   },
   "private": true,
   "scripts": {
     "start": "wrangler dev",
-    "deploy": "wrangler publish",
+    "deploy": "wrangler deploy",
+    "tail-logs": "wrangler tail",
     "lint": "gts lint",
     "clean": "gts clean",
     "compile": "tsc",
@@ -19,5 +20,9 @@
     "prepare": "npm run compile",
     "pretest": "npm run compile",
     "posttest": "npm run lint"
-  }
+  },
+  "engines": {
+    "node": ">=20",
+    "npm": ">=10"
+}
 }
